--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    
+    <div class="form-container">
+      <form class="form">
+        <input type="text" class="input" name="imgInput" placeholder="Search images...">
+        <button type="submit" class="btn">Search</button>
+      </form>
+    </div>
+    <span class="loader"></span>
+    <div class="gallery-container">
+      <ul class="gallery"></ul>
+    </div>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+  
 
     <script type="module" src="./main.js"></script>
   </body>
