--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,15 @@
   <body>
 
     
-    <div class="form-container">
+    <div class="formCont">
       <form class="form">
         <input type="text" class="input" name="imgInput" placeholder="Search images...">
         <button type="submit" class="btn">Search</button>
       </form>
     </div>
-    <span class="loader"></span>
+    <div class="loader-container">
+      <div class="loader"></div>
+    </div>
     <div class="gallery-container">
       <ul class="gallery"></ul>
     </div>
